force-app/main/default/objects/Evidence__c/Evidence__c.object-meta.xml
<CustomObject>
    <label>Evidence</label>
    <pluralLabel>Evidence</pluralLabel>
    <nameField>
        <label>Evidence ID</label>
        <type>AutoNumber</type>
        <displayFormat>EV-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Supporting documents and data artifacts attached to a Loan Application. Each record links to one uploaded document (ContentVersion) or external source. Zero or more per Loan_Application__c.</description>
</CustomObject>