force-app/main/default/objects/Evidence__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>PAY_STUB</fullName><default>true</default><label>PAY_STUB</label></value>
            <value><fullName>W2</fullName><default>false</default><label>W2</label></value>
            <value><fullName>BANK_STATEMENT</fullName><default>false</default><label>BANK_STATEMENT</label></value>
            <value><fullName>TAX_RETURN</fullName><default>false</default><label>TAX_RETURN</label></value>
            <value><fullName>PHOTO_ID</fullName><default>false</default><label>PHOTO_ID</label></value>
            <value><fullName>PURCHASE_AGREEMENT</fullName><default>false</default><label>PURCHASE_AGREEMENT</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>