force-app/main/default/objects/Evidence__c/fields/Extraction_Status__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Status__c</fullName>
    <label>Extraction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>PENDING</fullName><default>true</default><label>PENDING</label></value>
            <value><fullName>PROCESSING</fullName><default>false</default><label>PROCESSING</label></value>
            <value><fullName>COMPLETED</fullName><default>false</default><label>COMPLETED</label></value>
            <value><fullName>FAILED</fullName><default>false</default><label>FAILED</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>